Players, GM, state and player as input for now in API
